@@ -1,3 +1,10 @@
+Wed Apr 27 11:15:42 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:
+
+          Bug fix where the passivate environment actions was generated
+          incorrectly.
+
 Tue Apr 26 20:59:24 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * tutorials/QuickStart/PingPong_PingComponentImpl.h:
